--- a/package.json
+++ b/package.json
@@ -70,21 +70,6 @@
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nrwl/cli": "^15.9.3",
-    "@nrwl/express": "^19.5.1",
-    "@nrwl/nest": "^19.5.1",
-    "@nrwl/node": "^19.5.1",
-    "@nrwl/nx-cloud": "^19.0.0",
-    "@nx/eslint": "19.5.1",
-    "@nx/eslint-plugin": "19.5.1",
-    "@nx/jest": "19.5.1",
-    "@nx/js": "19.5.1",
-    "@nx/nest": "19.5.1",
-    "@nx/node": "19.5.1",
-    "@nx/web": "19.5.1",
-    "@nx/webpack": "19.5.1",
-    "@nx/workspace": "19.5.1",
-    "@pact-foundation/pact": "^13.1.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -98,7 +83,6 @@
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "19.5.1",
     "prettier": "^2.6.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -107,7 +91,6 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "~5.5.2",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "@pact-foundation/pact-cli": "^15.0.2"
+    "webpack-cli": "^5.1.4"
   }
 }
